[gd_scene load_steps=3 format=3 uid="uid://dwgjbbrfj0fsk"]

[ext_resource type="Script" uid="uid://cywaxk1eivf11" path="res://menu.gd" id="1_tg4cr"]
[ext_resource type="Texture2D" uid="uid://bxg351cb6lh6j" path="res://menubg.jpeg" id="1_v2lfg"]

[node name="menu" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_tg4cr")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
texture = ExtResource("1_v2lfg")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
text = "PLAY"

[node name="settings" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
